maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:81: error: ';' expected but '=' found.
    (x, y) = (getX(), getY())
           ^