maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  marquerCases()
}



def marquerCases()
{
	var (h, l) = (getMondeHauteur(), getMondeLargeur())
  
  
  for(x<- 0 to l-1) //Ces boucles permettent de noter 0 sur la case du Baggle
  {
    for(y<- 0 to h-1)
    {
      if (aBiscuit(x, y))
      {
        setIndication(x, y, 0)
      }
    }
  }
  
  var compteur = 0
  var (xBuggle, yBuggle) = (getX(), getY())
  while(getIndication(xBuggle, yBuggle) == 9999) //Tant que le marquage n'atteint pas le Buggle
  
  {
    for (x<- 0 to l-1) // On boucle sur les cases du Monde
    {
      for (y<- 0 to h-1)
      {
        if (getIndication(x, y) == compteur)
        {
          marquerAutour(x, y)
        }
      }
    }
    compteur += 1
  }
}
  
  

def aMurEst(x:Int, y:Int) : Boolean =
  {
    if (x == getMondeLargeur()-1)
    	return true
    else 
    	return aMurOuest(x+1, y)
  }
  
def aMurSud(x:Int, y:Int) : Boolean =
  {
    if (y == getMondeHauteur()-1)
    	return true
    else
    	return aMurNord(x, y+1)
  }

def marquerAutour(x:Int, y:Int)
{
  if (!aMurOuest(x, y) && getIndication(x-1, y) == 9999)
   	setIndication(x-1, y, getIndication(x, y) + 1) 
    
  if (!aMurNord(x, y) && getIndication(x, y-1) == 9999)
   	setIndication(x, y-1, getIndication(x, y) + 1) 
        
  if (!aMurSud(x, y) && getIndication(x, y+1) == 9999)
   	setIndication(x, y+1, getIndication(x, y) + 1) 
          
  if (!aMurEst(x, y) && getIndication(x+1, y) == 9999)
   	setIndication(x+1, y, getIndication(x, y) + 1) 
}


def allerObjectif()
{
  while(!estSurBiscuit())
  {
    (x, y) = (getX(), getY())
    indice = getIndication(x, y)
    
  }
}

def plusCourt(x:Int, y:Int, ind:Int)
{
  if(y != getMondeHauteur()-1 && getIndication(x, y+1) == ind-1)
  	setDirection(Direction.Sud)
}